feat(ci): update workflow triggers for feature branch support
- Update GitHub Actions to trigger on main and feature/** branches
- Enable workflow on both push and pull_request events for feature branches
- Update documentation to reflect new trigger configuration
- Improve development workflow for feature branch testing
- Maintain existing tag-based release automation

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -122,8 +122,8 @@ vscode-theme/
 The project includes an automated build workflow (`.github/workflows/build-vsix.yml`) that:
 
 **Triggers:**
-- Push to `main` or `develop` branches
-- Pull requests to `main`
+- Push to `main` or any `feature/**` branches
+- Pull requests to `main` or any `feature/**` branches
 - Git tags starting with `v` (e.g., `v0.1.0`)
 - Manual workflow dispatch
 
@@ -135,7 +135,9 @@ The project includes an automated build workflow (`.github/workflows/build-vsix.
 5. **Asset Upload**: Attaches VSIX file to releases for easy download
 
 **Usage:**
-- **Development**: Push to `main`/`develop` to validate and build
+- **Development**: Push to `main` or any `feature/**` branch to validate and build
+- **Feature Work**: All feature branches automatically build and validate when pushed
+- **Pull Requests**: PRs to `main` or `feature/**` branches trigger builds for validation
 - **Releases**: Create and push git tag (`git tag v0.1.0 && git push origin v0.1.0`)
 - **Downloads**: Get VSIX files from GitHub Actions artifacts or releases
 
